--- a/assets/css/bem.css
+++ b/assets/css/bem.css
@@ -1,9 +1,9 @@
 .bg-bem {
 	background-color: #8d0606;
 }
-.bg-cardd{
+.bg-cardd {
 	background-color: #d4cfcf;
-} 
+}
 .text-bem {
 	color: #8d0606;
 }
@@ -46,6 +46,10 @@
 	width: 18rem;
 }
 
+.bg-merah {
+	background-color: #a82d2d;
+}
+
 #myBtn {
 	display: none; /* Hidden by default */
 	position: fixed; /* Fixed/sticky position */
@@ -77,11 +81,15 @@
 .logo-footer {
 	width: 50%;
 }
-.mm {
-	margin-left: 70px;
+.m-m {
+	margin-left: 6rem;
 }
 
-
+.video {
+	width: 100%;
+	height: 480;
+	border: #f7f7f7;
+}
 
 /* dari elements bwa  footer */
 
